syntax = "proto3";
package wormhole_foundation.deltachain.wormhole;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "wormhole/guardian.proto";
import "wormhole/config.proto";
import "wormhole/replay_protection.proto";
import "wormhole/sequence_counter.proto";
import "wormhole/consensus_guardian_set_index.proto";
// this line is used by starport scaffolding # 1
import "gogoproto/gogo.proto";

option go_package = "github.com/deltaswapio/deltachain/x/deltaswap/types";

// Query defines the gRPC querier service.
service Query {
    // Queries a guardianSet by index.
	rpc PhylaxSet(QueryGetPhylaxSetRequest) returns (QueryGetPhylaxSetResponse) {
		option (google.api.http).get = "/wormhole_foundation/deltachain/wormhole/guardianSet/{index}";
	}

	// Queries a list of guardianSet items.
	rpc PhylaxSetAll(QueryAllPhylaxSetRequest) returns (QueryAllPhylaxSetResponse) {
		option (google.api.http).get = "/wormhole_foundation/deltachain/wormhole/guardianSet";
	}

// Queries a config by index.
	rpc Config(QueryGetConfigRequest) returns (QueryGetConfigResponse) {
		option (google.api.http).get = "/wormhole_foundation/deltachain/wormhole/config";
	}
// Queries a replayProtection by index.
	rpc ReplayProtection(QueryGetReplayProtectionRequest) returns (QueryGetReplayProtectionResponse) {
		option (google.api.http).get = "/wormhole_foundation/deltachain/wormhole/replayProtection/{index}";
	}

	// Queries a list of replayProtection items.
	rpc ReplayProtectionAll(QueryAllReplayProtectionRequest) returns (QueryAllReplayProtectionResponse) {
		option (google.api.http).get = "/wormhole_foundation/deltachain/wormhole/replayProtection";
	}

// Queries a sequenceCounter by index.
	rpc SequenceCounter(QueryGetSequenceCounterRequest) returns (QueryGetSequenceCounterResponse) {
		option (google.api.http).get = "/wormhole_foundation/deltachain/wormhole/sequenceCounter/{index}";
	}

	// Queries a list of sequenceCounter items.
	rpc SequenceCounterAll(QueryAllSequenceCounterRequest) returns (QueryAllSequenceCounterResponse) {
		option (google.api.http).get = "/wormhole_foundation/deltachain/wormhole/sequenceCounter";
	}

// Queries a ConsensusPhylaxSetIndex by index.
	rpc ConsensusPhylaxSetIndex(QueryGetConsensusPhylaxSetIndexRequest) returns (QueryGetConsensusPhylaxSetIndexResponse) {
		option (google.api.http).get = "/wormhole_foundation/deltachain/wormhole/consensus_guardian_set_index";
	}
// Queries a PhylaxValidator by index.
	rpc PhylaxValidator(QueryGetPhylaxValidatorRequest) returns (QueryGetPhylaxValidatorResponse) {
		option (google.api.http).get = "/wormhole_foundation/deltachain/wormhole/guardian_validator/{guardianKey}";
	}

	// Queries a list of PhylaxValidator items.
	rpc PhylaxValidatorAll(QueryAllPhylaxValidatorRequest) returns (QueryAllPhylaxValidatorResponse) {
		option (google.api.http).get = "/wormhole_foundation/deltachain/wormhole/guardian_validator";
	}

// Queries a list of LatestPhylaxSetIndex items.
	rpc LatestPhylaxSetIndex(QueryLatestPhylaxSetIndexRequest) returns (QueryLatestPhylaxSetIndexResponse) {
		option (google.api.http).get = "/wormhole_foundation/deltachain/wormhole/latest_guardian_set_index";
	}

	rpc AllowlistAll(QueryAllValidatorAllowlist) returns (QueryAllValidatorAllowlistResponse) {
		option (google.api.http).get = "/wormhole_foundation/deltachain/wormhole/allowlist";
	}

	rpc Allowlist(QueryValidatorAllowlist) returns (QueryValidatorAllowlistResponse) {
		option (google.api.http).get = "/wormhole_foundation/deltachain/wormhole/allowlist/{validator_address}";
	}

	rpc IbcComposabilityMwContract(QueryIbcComposabilityMwContractRequest) returns (QueryIbcComposabilityMwContractResponse) {
		option (google.api.http).get = "/wormhole_foundation/deltachain/wormhole/ibc_composability_mw_contract";
	}

	rpc WasmInstantiateAllowlistAll(QueryAllWasmInstantiateAllowlist) returns (QueryAllWasmInstantiateAllowlistResponse) {
		option (google.api.http).get = "/wormhole_foundation/deltachain/wormhole/wasm_instantiate_allowlist";
	}

// this line is used by starport scaffolding # 2
}

message QueryAllValidatorAllowlist {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// all allowlisted entries by all validators
message QueryAllValidatorAllowlistResponse {
	repeated ValidatorAllowedAddress allowlist = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryValidatorAllowlist {
	string validator_address = 1;
	cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// all allowlisted entries by a specific validator
message QueryValidatorAllowlistResponse {
	string validator_address = 1;
	repeated ValidatorAllowedAddress allowlist = 2;
	cosmos.base.query.v1beta1.PageResponse pagination = 3;
}

message QueryGetPhylaxSetRequest {
	uint32 index = 1;
}

message QueryGetPhylaxSetResponse {
	PhylaxSet PhylaxSet = 1 [(gogoproto.nullable) = false];
}

message QueryAllPhylaxSetRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllPhylaxSetResponse {
	repeated PhylaxSet PhylaxSet = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetConfigRequest {}

message QueryGetConfigResponse {
	Config Config = 1 [(gogoproto.nullable) = false];
}
message QueryGetReplayProtectionRequest {
	  string index = 1;

}

message QueryGetReplayProtectionResponse {
	ReplayProtection replayProtection = 1 [(gogoproto.nullable) = false];
}

message QueryAllReplayProtectionRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllReplayProtectionResponse {
	repeated ReplayProtection replayProtection = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetSequenceCounterRequest {
	  string index = 1;

}

message QueryGetSequenceCounterResponse {
	SequenceCounter sequenceCounter = 1 [(gogoproto.nullable) = false];
}

message QueryAllSequenceCounterRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllSequenceCounterResponse {
	repeated SequenceCounter sequenceCounter = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetConsensusPhylaxSetIndexRequest {}

message QueryGetConsensusPhylaxSetIndexResponse {
	ConsensusPhylaxSetIndex ConsensusPhylaxSetIndex = 1 [(gogoproto.nullable) = false];
}
message QueryGetPhylaxValidatorRequest {
	  bytes guardianKey = 1;

}

message QueryGetPhylaxValidatorResponse {
	PhylaxValidator guardianValidator = 1 [(gogoproto.nullable) = false];
}

message QueryAllPhylaxValidatorRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllPhylaxValidatorResponse {
	repeated PhylaxValidator guardianValidator = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryLatestPhylaxSetIndexRequest {
}

message QueryLatestPhylaxSetIndexResponse {
  uint32 latestPhylaxSetIndex = 1;
}

message QueryIbcComposabilityMwContractRequest {
}

message QueryIbcComposabilityMwContractResponse {
	string contractAddress = 1;
}

message QueryAllWasmInstantiateAllowlist {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// all allowlisted entries by all validators
message QueryAllWasmInstantiateAllowlistResponse {
	repeated WasmInstantiateAllowedContractCodeId allowlist = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
